tests/ppx/meth.expected
Characters 40-43:
  fun (obj : int) -> obj##m
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##m
                          ^^^
Error: This expression has type <  > Js.t
       but an expression was expected of type < m : 'a Js.meth; .. > Js.t
       The first object type has no method m
Characters 43-46:
  fun (obj : < m : float Js.prop > Js.t) -> obj##m
                                            ^^^
Error: This expression has type < m : float Js.prop > Js.t
       but an expression was expected of type < m : 'a Js.meth; .. > Js.t
       Type float Js.prop = < get : float; set : float -> unit > Js.gen_prop
       is not compatible with type 'a Js.meth 
       Types for method m are incompatible
Characters 43-49:
  fun (obj : < m : float Js.meth > Js.t) -> obj##m + 1
                                            ^^^^^^
Error: This expression has type float but an expression was expected of type
         int
Characters 48-51:
  fun (obj : < m : int -> int Js.meth > Js.t) -> obj##m + 1
                                                 ^^^
Error: This expression has type < m : int -> int Js.meth > Js.t
       but an expression was expected of type < m : 'a Js.meth; .. > Js.t
       Types for method m are incompatible
Characters 41-44:
  fun (obj : < m : int Js.meth > Js.t) -> obj##m 1
                                          ^^^
Error: This expression has type < m : int Js.meth > Js.t
       but an expression was expected of type
         < m : 'a -> 'b Js.meth; .. > Js.t
       Types for method m are incompatible
Characters 50-58:
  fun (obj : < m : int -> float Js.meth > Js.t) -> obj##m 1 + 1
                                                   ^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int

